# esqueleto

./: .editorconfig  .gitignore  .travis.yml  Makefile  README.md  cabal.project  cabal.project.freeze  changelog.md  esqueleto.cabal  package.yaml  screwdriver.yaml  stack-7.10.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml  stack-9.0.yaml  stack-nightly.yaml  stack.yaml  style-guide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: haskell.yml
docs/: Esqueleto-Architecture.md  blog_post_2012_08_06
examples/: Blog.hs  LICENSE  Main.hs  README.md  esqueleto-examples.cabal  package.yaml  stack.yaml
src/Database/: Esqueleto.hs
src/Database/Esqueleto/: Compat.hs  Experimental.hs  ForeignKey.hs  Legacy.hs  MySQL.hs  PostgreSQL.hs  Record.hs  SQLite.hs
src/Database/Esqueleto/Experimental/: Aggregates.hs  CommonTableExpression.hs  From.hs  Internal.hs  Join.hs  SqlSetOperation.hs  SubQuery.hs  ToAlias.hs  ToAliasReference.hs  ToMaybe.hs  WindowFunctions.hs
src/Database/Esqueleto/Experimental/From/: CommonTableExpression.hs  Join.hs  SqlSetOperation.hs
src/Database/Esqueleto/Internal/: ExprParser.hs  Internal.hs  JSON.hs  Language.hs  PersistentImport.hs  Sql.hs  SqlTypeable.hs  Types.hs
src/Database/Esqueleto/PostgreSQL/: JSON.hs  Pgcrypto.hs  Window.hs  WindowFunction.hs
src/Database/Esqueleto/PostgreSQL/JSON/: Experimental.hs  Instances.hs
src/Database/Esqueleto/PostgreSQL/Window/: Frame.hs
test/: Spec.hs  Test.hs  docker-compose.yml
test/Common/: .Test.hs.swp  CompatSpec.hs  LegacyTest.hs  Record.hs  Test.hs
test/Common/Test/: CTE.hs  Import.hs  Models.hs  Select.hs
test/MySQL/: LegacyTest.hs  Test.hs
test/PostgreSQL/: LegacyTest.hs  MigrateJSON.hs  Test.hs
test/ReadWrite/: ShouldNotTypeCheck.dump-ds  ShouldNotTypeCheck.hs  Test.hs
test/SQLite/: LegacyTest.hs  Test.hs
test/Test/: Types.hs
test/expected-compile-failures/: .gitignore  ChangeLog.md  README.md  package.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack.yaml  test.sh
test/expected-compile-failures/src/: Lib.hs
test/expected-compile-failures/update-read-role/: Main.hs
test/expected-compile-failures/write-read-role/: Main.hs
test/new-join-compiler-errors/: README.md  new-join-compiler-errors.cabal  package.yaml  stack.yaml
test/new-join-compiler-errors/bad-errors/: Main.hs
