cabal-version: 1.12

name:           esqueleto

version:        3.5.12.0
synopsis:       Type-safe EDSL for SQL queries on persistent backends.
description:    @esqueleto@ is a bare bones, type-safe EDSL for SQL queries that works with unmodified @persistent@ SQL backends.  Its language closely resembles SQL, so you don't have to learn new concepts, just new syntax, and it's fairly easy to predict the generated SQL and optimize it for your backend. Most kinds of errors committed when writing SQL are caught as compile-time errors---although it is possible to write type-checked @esqueleto@ queries that fail at runtime.
                .
                @persistent@ is a library for type-safe data serialization.  It has many kinds of backends, such as SQL backends (@persistent-mysql@, @persistent-postgresql@, @persistent-sqlite@) and NoSQL backends (@persistent-mongoDB@). While @persistent@ is a nice library for storing and retrieving records, including with filters, it does not try to support some of the features that are specific to SQL backends.  In particular, @esqueleto@ is the recommended library for type-safe @JOIN@s on @persistent@ SQL backends.  (The alternative is using raw SQL, but that's error prone and does not offer any composability.)
                .
                Currently, @SELECT@s, @UPDATE@s, @INSERT@s and @DELETE@s are supported. Not all SQL features are available, but most of them can be easily added (especially functions), so please open an issue or send a pull request if you need anything that is not covered by @esqueleto@ on <https://github.com/bitemyapp/esqueleto>.
                .
                The name of this library means \"skeleton\" in Portuguese and contains all three SQL letters in the correct order =).  It was inspired by Scala's Squeryl but created from scratch.
category:       Database
homepage:       https://github.com/bitemyapp/esqueleto
author:         Felipe Lessa
maintainer:     cma@bitemyapp.com
copyright:      (c) 2012-2016 Felipe Almeida Lessa
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    changelog.md

source-repository head
    type: git
    location: git://github.com/bitemyapp/esqueleto.git

library
    exposed-modules:
        Database.Esqueleto
        Database.Esqueleto.Legacy
        Database.Esqueleto.Experimental
        Database.Esqueleto.Internal.Internal
        Database.Esqueleto.Internal.ExprParser
        Database.Esqueleto.MySQL
        Database.Esqueleto.PostgreSQL
        Database.Esqueleto.PostgreSQL.JSON
        Database.Esqueleto.Record
        Database.Esqueleto.SQLite
        Database.Esqueleto.Experimental.From
        Database.Esqueleto.Experimental.From.CommonTableExpression
        Database.Esqueleto.Experimental.From.Join
        Database.Esqueleto.Experimental.From.SqlSetOperation
        Database.Esqueleto.Experimental.ToAlias
        Database.Esqueleto.Experimental.ToAliasReference
        Database.Esqueleto.Experimental.ToMaybe
    other-modules:
        Database.Esqueleto.PostgreSQL.JSON.Instances
        Database.Esqueleto.Internal.PersistentImport
        Paths_esqueleto
    hs-source-dirs:
        src/
    build-depends:
        base >=4.8 && <5.0
      , aeson >=1.0
      , attoparsec >= 0.13 && < 0.15
      , blaze-html
      , bytestring
      , conduit >=1.3
      , containers
      , monad-logger
      , persistent >=2.13 && <3
      , resourcet >=1.2
      , tagged >=0.2
      , template-haskell
      , text >=0.11 && <2.2
      , time >=1.5.0.1 && <=1.13
      , transformers >=0.2
      , unliftio
      , unordered-containers >=0.2
    ghc-options:
        -Wall
        -Wno-redundant-constraints
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wpartial-fields
        -Wmissing-home-modules
        -Widentities
        -Wcpp-undef
        -Wcpp-undef
    default-language: Haskell2010

test-suite specs
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Common.Test
        Common.Test.Models
        Common.Test.Import
        Common.Test.Select
        Common.Record
        PostgreSQL.MigrateJSON
        SQLite.Test
        PostgreSQL.Test
        MySQL.Test
    default-extensions:
        RankNTypes
    hs-source-dirs:
        test
    ghc-options: -Wall -threaded
    build-depends:
        base >=4.8 && <5.0
      , aeson
      , attoparsec
      , blaze-html
      , bytestring
      , conduit
      , containers
      , esqueleto
      , exceptions
      , hspec
      , hspec-core
      , monad-logger
      , mtl
      , mysql
      , mysql-simple
      , persistent
      , persistent-mysql
      , persistent-postgresql
      , persistent-sqlite
      , postgresql-simple
      , QuickCheck
      , resourcet
      , tagged
      , template-haskell
      , text
      , time
      , transformers
      , unliftio
      , unordered-containers
    default-language: Haskell2010
